fix button space in hero module on mobile resolution

--- a/src/scss/blocks/hero.scss
+++ b/src/scss/blocks/hero.scss
@@ -258,7 +258,7 @@
       margin-top: 6.2vw;
       padding: 0 10px;
       font-size: 4.37vw;
-      justify-content: space-between;
+      justify-content: space-around;
     }
     & &__subtitle {
       margin: 0 auto;
